# bmad-method

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-initialize-cargo-workspace-structure.md  1-2-define-shared-types-in-bmad-types.md  1-3-implement-bmad-frontmatter-parser.md  1-4-implement-rust-code-generator.md  1-5-plugin-shell-registration-api-compliance.md  1-6-end-to-end-build-pipeline-integration.md  2-1-taskexecutor-integration-agent-routing.md  2-2-input-handling-agentoutput-construction.md  2-3-core-agent-definition-files.md  2-4-remaining-agent-definition-files.md  2-5-multi-agent-dag-workflow-compatibility.md  3-1-bmad-frontmatter-schema-pulse-api-contract.md  3-2-agent-metadata-embedding-registry-queries.md  3-3-agent-reference-documentation.md  4-1-distribution-packaging-script.md  4-2-cross-platform-ci-cd-build-pipeline.md  4-3-cli-plugin-installation.md  4-4-manual-installation.md  4-5-plugin-verification-metadata-display.md  4-6-plugin-uninstall-and-update.md  5-1-remove-or-integrate-bmadconfig-dead-code.md  5-2-fix-verify-all-agents-valid-json.md  5-3-consolidate-agent-metadata-id-name.md  5-4-replace-allow-dead-code-with-proper-visibility.md  6-1-extend-bmad-frontmatter-schema-with-config-fields.md  6-2-generate-suggested-config-function-in-agent-modules.md  6-3-remove-hardcoded-suggested-config-for-match-block.md  7-1-add-input-size-limit-to-extract-user-context.md  7-2-make-prompt-fallback-explicit-with-logging.md  7-3-document-bypasspermissions-rationale-for-dev-agent.md  7-4-document-input-sanitization-responsibility-boundary.md  8-1-extend-system-prompt-keyword-tests-to-all-12-agents.md  8-2-fix-system-prompt-non-empty-for-all-agents-test.md  8-3-add-tests-for-suggested-config-wildcard-fallback.md  8-4-add-suggested-config-validation-to-integration-tests.md  9-1-add-schema-version-field-to-bmadoutput.md  9-2-expose-agent-capabilities-in-bmadoutput.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics-v2-improvements.md  epics.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/_memory/: config.yaml
agents/: analyst.md  architect.md  bmad-master.md  developer.md  devops.md  pm.md  qa.md  quick-flow-solo-dev.md  quick-flow.md  scrum-master.md  security.md  tech-writer.md  ux-designer.md
crates/bmad-converter/: Cargo.toml
crates/bmad-converter/src/: lib.rs  main.rs
crates/bmad-converter/src/codegen/: mod.rs  templates.rs  writer.rs
crates/bmad-converter/src/parser/: frontmatter.rs  mod.rs
crates/bmad-plugin/: Cargo.toml
crates/bmad-plugin/src/: executor.rs  lib.rs  main.rs  pulse_api_stub.rs  registry.rs
crates/bmad-plugin/wit/: pulse-plugin.wit
docs/: README-consistency-check.md  bmad-frontmatter-schema.md  pulse-api-contract.md
scripts/: build.sh  package.sh
src/: lib.rs
tests/: cli_install_verification.sh  converter_integration.rs  lifecycle_test.sh  manual_install_test.sh  packaging_test.sh  plugin_integration.rs
(+12 files in other folders)
